# Copyright © 2022 Rot127 <unisono@quyllur.org>
# Copyright © 2024 2022 Rot127 <unisono@quyllur.org>
# SPDX-License-Identifier: BSD-3

[project]
name = "autosync"
version = "0.1.0"
dependencies = [
  "termcolor >= 2.3.0",
  "tree_sitter == 0.22.3",
  "tree-sitter-cpp == 0.22.3",
  "black >= 24.3.0",
  "usort >= 1.0.8",
  "setuptools >= 69.2.0",
  "ninja >= 1.11.1.1",
  "reuse >= 3.0.1",
  "clang-format >= 18.1.1",
  "lit >= 18.1.8",
]
requires-python = ">= 3.11"

[tool.setuptools]
packages = ["autosync", "autosync.cpptranslator", "autosync.cpptranslator.patches"]
package-dir = {"" = "src"}

[project.scripts]
ASUpdater = "autosync.ASUpdater:main"
